# zimmer-app

./: package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
app/: globals.css  layout.tsx  page.tsx
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/(user)/login/: page.tsx
app/(user)/signup/: page.tsx
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/components/: Header.tsx
client/src/components/common/: Feed.tsx  Header.tsx  Sidebar.tsx
client/src/components/notices/: NoticeDetail.tsx
client/src/components/posts/: PostCard.tsx  PostDetail.tsx
client/src/components/users/: Login.tsx  Signup.tsx
client/src/pages/comments/: comment.tsx
components/: search-header.tsx  sidebar.tsx
components/auth/: Login.tsx  Signup.tsx
components/header/: notification.tsx  search-header.tsx  user-menu.tsx
components/ui/: back-button.tsx  nav-item.tsx  project-card.tsx
server/: Cargo.toml
server/src/: database.sql  main.rs  routes.rs
server/src/dbaccess/: post.rs
server/src/handlers/: general.rs  post.rs
server/src/models/: post.rs
src/: App.tsx  index.css
src/components/: Footer.tsx  Header.tsx
src/components/comments/: Comment.tsx
src/components/common/: Header.tsx  Sidebar.tsx
src/components/posts/: PostCard.tsx  SubmitPostForm.tsx
src/components/ui/: back-button.tsx  icons.tsx
src/components/users/: Signup.tsx
src/pages/comments/: comment.tsx
src/pages/notices/: notice.tsx
src/pages/users/: login.tsx
(+6 files in other folders)
