[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = "0.8.2"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
